--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/1.3.0/react-bootstrap.min.js" 
+  integrity="sha512-QMqIKaTq7LiZrlvEAm7bKJjR6kPc9rMjcAyRBEDCURcIfa6KhmjmPH0rHFApkm7g4jquxFU51ugbJvDzHNXS7g==" 
+  crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <!--React bootstrap-->
   <link
   rel="stylesheet"
@@ -14,7 +18,8 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
   />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
   <title>Employee Management Tool</title>
 </head>
 
