--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,8 @@
   integrity="sha512-QMqIKaTq7LiZrlvEAm7bKJjR6kPc9rMjcAyRBEDCURcIfa6KhmjmPH0rHFApkm7g4jquxFU51ugbJvDzHNXS7g==" 
   crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <!--Font Awesome-->
+  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
   <!--React bootstrap-->
   <link
   rel="stylesheet"
