--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&family=Roboto:wght@300&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@500&family=Wallpoet&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/1.3.0/react-bootstrap.min.js" 
   integrity="sha512-QMqIKaTq7LiZrlvEAm7bKJjR6kPc9rMjcAyRBEDCURcIfa6KhmjmPH0rHFApkm7g4jquxFU51ugbJvDzHNXS7g==" 
@@ -19,8 +19,6 @@
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
   crossorigin="anonymous"
   />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
   <title>Employee Management Tool</title>
 </head>
 
